# run_doggy_run

./: .breakpoints  .replit  README.md  doglength.py  fasttrack.py  greyhoundracinguk.py  main.py  pyproject.toml
data/: data_final.csv  racecards.csv  raceddetails.csv  raceddetails_53128.csv  results.csv  tracks.csv
data/racedetails/: 2021-10-12_59449.csv  2021-10-12_59450.csv  2021-10-12_59451.csv  2021-10-12_59452.csv  2021-10-12_59453.csv  2021-10-12_59454.csv  2021-10-12_59455.csv  2021-10-12_59456.csv  2021-10-12_59457.csv  2021-10-12_59458.csv  2021-10-12_59459.csv  2021-10-12_59460.csv  2021-10-12_59487.csv  2021-10-12_59488.csv  2021-10-12_59489.csv  2021-10-12_59490.csv  2021-10-12_59491.csv  2021-10-12_59513.csv  2021-10-12_59514.csv  2021-10-12_59515.csv  2021-10-12_59516.csv  2021-10-12_59517.csv  2021-10-12_59518.csv  2021-10-12_59519.csv  2021-10-12_59520.csv  2021-10-12_59521.csv  2021-10-12_59522.csv  2021-10-12_59523.csv  2021-10-12_59524.csv  2021-10-12_59525.csv  2021-10-12_59526.csv  2021-10-12_59527.csv  2021-10-12_59528.csv  2021-10-12_59529.csv  2021-10-12_59530.csv  2021-10-12_59531.csv  2021-10-12_59532.csv  2021-10-12_59533.csv  2022-02-24_78194.csv  2022-02-24_78195.csv  (+1149 more)
