[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core>=1.0.0"]

[tool]
[tool.poetry]
authors = ["Your Name <you@example.com>"]
description = ""
name = "python-template"
version = "0.1.0"
[tool.poetry.dependencies]
betfairlightweight = "^2.16.1"
numpy = "^1.22.2"
pandas = "^1.4.1"
python = "^3.8"
python-dotenv = "^0.19.2"
sklearn = "^0.0"
tqdm = "^4.62.3"
xmltodict = "^0.12.0"
[tool.poetry.dev-dependencies]
